<resources>
    <string name="app_name">TCGO</string>
    <string name="title_activity_welcome">Map</string>
    <string name="google_direction_api">AIzaSyCmtQfrrX6NGPMWoSOqlHi7PsQ0epqGEBo</string>
    <string name="title_activity_driver_tracking">Map</string>
    <string name="title_activity_trip_detail">Map</string>
    <string name="title_activity_driver_home">DriverHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cancelar">CANCELAR</string>
    <string name="ingresar">INGRESAR</string>
    <string name="reason">Motivo</string>
    <string name="enter">ENTRAR</string>
    <string name="forget_your_password">¿Olvidaste tu contraseña? has click aquí</string>
    <string name="accept">Aceptar</string>
    <string name="new_update_available">Nueva Actualización Disponible</string>
    <string name="please_update_version">Por favor actualice su versión desde el Play Store</string>
    <string name="not_login_this_device">No puedes iniciar sesión en este dispositivo</string>
    <string name="entry">INGRESO</string>
    <string name="entry_number_id">Por favor digita tu Número de Cédula y Contraseña</string>
    <string name="please_entry_number_id">Por favor ingresa tu Número de Cédula</string>
    <string name="please_entry_password">Por favor ingresa tu Contraseña</string>
    <string name="passwor_too_short">La contraseña es muy corta</string>
    <string name="user_is_not_registered">El Usuario no está registrado</string>
    <string name="link_restore_password_sended">El link para reestablecer tu contraseña fue enviado.</string>
    <string name="please_entry_your_email">Por favor ingresa tu correo electrónico</string>
    <string name="forget_your_password_single">¿OLVIDASTE TU CONTRASEÑA?</string>
    <string name="not_allow_send_email_restore">No se puedo enviar el correo de restablecimiento</string>
    <string name="please_verify_your_conection_internet">Por favor verifica tu usuario, contraseña o conexión a internet.</string>
    <string name="options">Opciones</string>
    <string name="Sync">Sincronizar</string>
    <string name="home">Inicio</string>
    <string name="map">Mapa</string>
    <string name="tasks">Tareas</string>
    <string name="Signature">Firma</string>
    <string name="PopUp">PopUp</string>
    <string name="AuthSi">AUTORIZA</string>
    <string name="AuthNo">NO AUTORIZA</string>
    <string name="Check_SI">CONFORME</string>
    <string name="Check_NO">NO CONFORME</string>
    <string name="Check_NA">NO APLICA</string>
    <string name="bt_menu">MENÚ</string>
    <string-array name="spinnerItems">
        <item>Moto</item>
        <item>Carro</item>
        <item>Bicicleta</item>
    </string-array>
    <string-array name="spnPermiso">
        <item>Cita Médica</item>
        <item>Incapacidad</item>
        <item>Licencia</item>
        <item>Personal </item>
    </string-array>
    <string name="charge_data">Cargando datos..</string>
    <string name="take_pictures_continue">Toma las fotos de registro para continuar</string>
    <string name="can_not_finish_three_hours">No puedes finalizar jornada en un rango de 3 Horas</string>
    <string name="finish_break_for_continue">Finaliza Break Para Continuar</string>
    <string name="finish_lunch_for_continue">Finaliza Almuerzo Para Continuar</string>
    <string name="available_with_tasks">DISPONIBLE CON TAREAS</string>
    <string name="available_without_tasks">DISPONIBLE SIN TAREAS</string>
    <string name="finis_working_day">Finalizar Jornada</string>
    <string name="finish">Cancelar</string>
    <string name="aceppt">Aceptar</string>
    <string name="do_you_have">Tienes\n</string>
    <string name="tasks_opens">\"Tareas abiertas \"</string>
    <string name="single_task_open">\"1 Tarea abierta \"</string>
    <string name="in_process">en Proceso.\n</string>
    <string name="one_task">\"1 Tarea \"</string>
    <string name="tasks_pending">Tareas Pendientes.\n</string>
    <string name="one_task_pending">1 Tarea Pendiente.\n</string>
    <string name="those_tasks_closed_incomplet">Estas tareas se cerrarán como No Exitosas.\n\n</string>
    <string name="are_you_sure_continue">¿Estás seguro de Continuar?</string>
    <string name="closed_tasks">Cerrando Tareas..</string>
    <string name="are_you_sure_finis_work">¿Estás seguro de Finalizar Jornada?</string>
    <string name="finish_permissions_for_continue">Finaliza Permiso Para Continuar</string>
    <string name="cannot_finish_break">No puedes finalizar Break en un rango de 10 Minutos</string>
    <string name="finish_permission">Finaliza Permiso Para Continuar</string>
    <string name="finish_launch_for_continue">Finaliza Almuerzo Para Continuar</string>
    <string name="cannot_init_lunch_range_60_minutes">No puedes iniciar Almuerzo en un rango de 60 Minutos de haber iniciado jornada</string>
    <string name="cannot_lunch_range_20_minutes">No puedes finalizar Almuerzo en un rango de 20 Minutos</string>
    <string name="you_have_task_process">Tienes una tarea en proceso.</string>
    <string name="location_inactive">Ubicación Inactiva</string>
    <string name="please_verify_your_location">Por favor verifica que tu ubicación y acceso a internet estén activos.</string>
    <string name="active_location">Activar Ubicación</string>
    <string name="you_are_online">Estas online</string>
    <string name="you_are_offline">Estas offline</string>
    <string name="finish_work_day">Finalizar Jornada</string>
    <string name="init_work_day">Iniciar Jornada</string>
    <string name="finish_break">Finalizar Break</string>
    <string name="init_break">Iniciar Break</string>
    <string name="finish_lunch">Finalizar Almuerzo</string>
    <string name="init_lunch">Iniciar Almuerzo</string>
    <string name="init_permission">Iniciar Permiso</string>
    <string name="problem_conection">Problemas de conexión</string>
    <string name="please_get_online">Por favor ponte online</string>
    <string name="please_active_your_location">Por favor activa tu ubicación</string>
    <string name="this_momont_user_not_authorized">En el momento este usuario no se encuentra autorizado, para cualquier información comuníquese con el área de soporte.</string>
    <string name="state">Estado</string>
    <string name="problems_upload_images">Problemas al subir la imagen</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="help">Ayuda</string>
    <string name="logout">Salir</string>
    <string name="please_desconect">Por favor desconectese</string>
    <string name="logout_tcgo">Salir de TCGO</string>
    <string name="you_are_sure_logout">¿Estás seguro que quieres salir de la aplicación?</string>
    <string name="cancel">Cancelar</string>
    <string name="new_image">Nueva imagen</string>
    <string name="from_your_camera">Desde tu cámara</string>
    <string name="change_password_title">CAMBIAR CONTRASEÑA</string>
    <string name="please_fill_all_information">Por favor llena toda la información</string>
    <string name="the_password_was_changed">¡La contraseña ha sido cambiada!</string>
    <string name="the_password_cannot_changed">La contraseña no se pudo cambiar</string>
    <string name="password_old_incorrect">Contraseña antigua incorrecta</string>
    <string name="the_password_not_match">Las contraseñas no coinciden</string>
    <string name="the_password_was_changed_but_not_updated">La contraseña fue cambiada, pero no actualiza a la informacion del conductor</string>
    <string name="the_lastname_was_changed_but_not_updated">Tu apellido fue cambiado, pero no actualizo la informacion del conductor</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva Contraseña</string>
    <string name="name">Nombre</string>
    <string name="phone">Celular</string>
    <string name="update">ACTUALIZAR</string>
    <string name="id">Cedula</string>
    <string name="license">LICENCIA</string>
    <string name="license_date_expiration">FECHA DE VENCIMIENTO LICENCIA</string>
    <string name="edit_date">Editar Fecha</string>
    <string name="sure_soat">SEGURO SOAT</string>
    <string name="date_expiration_sure">FECHA DE VENCIMIENTO SEGURO</string>
    <string name="tecno_mechanics">TECNOMECÁNICA</string>
    <string name="date_expiration_tecno_mechanics">FECHA DE VENCIMIENTO TECNOMECÁNICA</string>
    <string name="receipt_public">RECIBO PÚBLICO</string>
    <string name="save">Guardar</string>
    <string name="must_init_forst_workday">Debes iniciar la jornada primero</string>
    <string name="no_tasks">Sin Tareas</string>
    <string name="no">No</string>
    <string name="check_schedule_permission">Verifica tu horario de Permiso</string>
    <string name="check_schedule_breack">Verifica tu horario de Breack</string>
    <string name="check_schedule_lunch">Verifica tu horario de Almuerzo</string>
    <string name="you_must_200_meters_of_task">Debes estar a 200 metros de la tarea</string>
    <string name="in_process_">En Proceso</string>
    <string name="pending">Pendiente</string>
    <string name="START_TOUR">INICIAR RECORRIDO</string>
    <string name="CANCEL_TOUR">CANCELAR RECORRIDO</string>
    <string name="REDIRECT_THIS_TASK">REDIRIGIR A ESTA TAREA</string>
    <string name="FINISH_TASK">FINALIZAR TAREA</string>
    <string name="code_copy">Código Copiado</string>
    <string name="my_tasks">Mis Tareas</string>
    <string name="tasks_finish">Tareas Finalizadas</string>
    <string name="not_taks_available">No hay tareas disponibles</string>
    <string name="no_has_task_finish">No cuentas con tareas finalizadas</string>
    <string name="BEGIN_TASK">INICIAR TAREA</string>
    <string name="form_task">Formulario de tarea</string>
    <string name="charge_images">Cargar imagenes</string>
    <string name="not_images_upload">No hay Imagenes para cargar</string>
    <string name="charge_images_may">CARGAR IMAGENES</string>
    <string name="please_complete_form">Por favor completa el formulario</string>
    <string name="online">Online</string>
    <string name="ruta_time">Ruta organizada por tiempo</string>
    <string name="rute_distance">Ruta organizada por distancia</string>
    <string name="rute_current">Ruta de tarea actual</string>
    <string name="organize_for_time_tasks">Organizar tareas por tiempo</string>
    <string name="organize_for_distance_tasks">Organizar tareas por distancia</string>
    <string name="estimated_time">Tiempo estimado:</string>
    <string name="zero_min">00:00 min</string>
    <string name="distance">Distancia:</string>
    <string name="zero_km">0 km</string>
    <string name="direction">Direction</string>
    <string name="type_rute_sn">Tipo de ruta: S/N</string>
    <string name="type_rute_time">Tipo de ruta: tiempo</string>
    <string name="type_rute_distance">Tipo de ruta: distancia</string>
    <string name="error_charge_rute">Error al cargar ruta</string>
    <string name="problem_conexion">Problemas de conexión</string>
    <string name="update_low">Actualizar</string>
    <string name="direction_spanish">Dirección</string>
    <string name="request_sended">Solicitud enviada</string>
    <string name="my_ubication">Mi Dirección</string>
    <string name="current_location">Ubicación Actual</string>
    <string name="last_name">Apellidos</string>
    <string name="CANCEL">CANCELAR</string>
    <string name="RESTORE">REESTABLECER</string>
    <string name="email">Email</string>
    <string name="observations">Observaciones</string>
</resources>