<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/btnSigIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgCerrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:src="@drawable/ic_arrow_back_white_24dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/direction_spanish"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:padding="10dp"
            android:textStyle="bold"
            android:theme="@style/ColorButtonBlue"
            android:textColor="@android:color/white"
            android:background="@color/colorText"
            android:layout_gravity="left"
            android:id="@+id/BtnSave"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/update_low" />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/etCurrentubication"
                    android:hint="@string/current_location"
                    android:inputType="phone"
                    android:text=""
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_singleLineEllipsis="true"
                    app:met_floatingLabel="highlight" />

            </LinearLayout>

        </LinearLayout>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etMyUbication"
            android:hint="@string/my_ubication"
            android:inputType="text"
            android:text=""
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_singleLineEllipsis="true"
            app:met_floatingLabel="highlight" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etObservations"
            android:hint="@string/observations"
            android:inputType="text"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_singleLineEllipsis="true"
            app:met_floatingLabel="highlight" />

    </LinearLayout>

</LinearLayout>