<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="vertical"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text=""
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtNewPassword"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:text=""
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtRepeatPassword"
            android:hint="Repite tu Nueva Contraseña"
            android:inputType="textPassword"
            android:text=""
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnCancel"
                android:background="@drawable/btn_sig_in_background"
                android:layout_marginRight="6dp"
                android:text="@string/CANCEL"
                android:textColor="@color/ic_launcher_white_background"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnChange"
                android:background="@drawable/btn_sig_in_background"
                android:layout_marginLeft="6dp"
                android:text="@string/RESTORE"
                android:textColor="@android:color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>