<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp">

    <ScrollView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:textSize="20sp"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textSize="20sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnActualizar"
                    android:background="@drawable/btn_sig_in_background"
                    android:text="@string/update"
                    android:textColor="@android:color/white"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/id" />

                <ImageView

                    android:layout_weight="1"
                    android:id="@+id/fotoCedulal1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxHeight="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_camera_alt_black_24dp" />

                <ImageView
                    android:layout_weight="1"
                    android:id="@+id/fotoCedulal2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_camera_alt_black_24dp" />

            </LinearLayout>

            <View
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/btnRegister" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/license" />

                <ImageView
                    android:layout_weight="1"
                    android:id="@+id/fotoLicencial1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxHeight="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_camera_alt_black_24dp" />

                <ImageView
                    android:layout_weight="1"
                    android:id="@+id/fotoLicencial2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_camera_alt_black_24dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/license_date_expiration" />

            <DatePicker
                android:id="@+id/dateFechaVenLic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <View
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/btnRegister" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/sure_soat" />

                <ImageView
                    android:layout_weight="2"
                    android:id="@+id/fotoSeguro"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxHeight="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_camera_alt_black_24dp" />

            </LinearLayout>

            <TextView
                android:text="@string/date_expiration_sure"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <DatePicker
                android:id="@+id/dateFechaVenSeg"
                android:calendarViewShown="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"/>

            <View
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/btnRegister" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/tecno_mechanics" />

                <ImageView
                    android:layout_weight="2"
                    android:id="@+id/fotoTecnicomec"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxHeight="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_camera_alt_black_24dp" />

            </LinearLayout>

            <TextView
                android:text="@string/date_expiration_tecno_mechanics"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <DatePicker
                android:id="@+id/dateFechaVenTec"
                android:calendarViewShown="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"/>

            <View
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/btnRegister" />

            <LinearLayout
                android:layout_marginBottom="40dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/receipt_public" />

                <ImageView
                    android:layout_weight="2"
                    android:id="@+id/fotoresibo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxHeight="100dp"
                    android:paddingBottom="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_camera_alt_black_24dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutProgressBarEditProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>