<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edtEmail"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text=""
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_singleLineEllipsis="true"
                app:met_floatingLabel="highlight"/>

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnCancelar"
                    android:background="@drawable/btn_register_background"
                    android:layout_marginEnd="4dp"
                    android:ellipsize="end"
                    android:text="@string/CANCEL"
                    android:textAlignment="center"
                    android:textColor="@color/ic_launcher_white_background"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="48dp" />

                <Button
                    android:id="@+id/btnReestablecer"
                    android:background="@drawable/btn_sig_in_background"
                    android:text="@string/RESTORE"
                    android:textColor="@color/ic_launcher_white_background"
                    android:layout_width="0dp"
                    android:padding="0dp"
                    android:textAlignment="center"
                    android:ellipsize="end"
                    android:layout_weight="1"
                    android:layout_height="48dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>